--- a/style.css
+++ b/style.css
@@ -82,6 +82,10 @@ body {
   color: hsl(0, 0%, 100%);
 }
 
+.ratings .rating .rate:focus {
+  outline: none;
+}
+
 .container .btn {
   width: 100%;
   margin: 20px 0;
