--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ body {
 
 .container {
   width: 400px;
-  height: 450px;
   background-color: hsl(215, 25%, 13%);
   padding: 30px;
   border-radius: 50px;
@@ -66,7 +65,11 @@ body {
 .ratings .rating .rate {
   list-style-type: none;
   background-color: #252d37;
-  padding: 20px 25px;
+  height: 60px;
+  width: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 50%;
   color: hsl(216, 12%, 54%);
   cursor: pointer;
@@ -80,6 +83,7 @@ body {
 .ratings .rating .rate.active {
   background-color: hsl(25, 97%, 53%);
   color: hsl(0, 0%, 100%);
+  outline: none;
 }
 
 .ratings .rating .rate:focus {
@@ -158,7 +162,6 @@ body {
 @media (max-width: 480px) {
   .container {
     width: 350px;
-    height: 420px;
   }
 
   .container .star-container {
@@ -166,7 +169,8 @@ body {
   }
 
   .ratings .rating .rate {
-    padding: 15px 20px;
+    height: 50px;
+    width: 50px;
   }
 
   .container .btn {
